# time_trial

./: .gitignore  Cargo.toml  cfg.json  uml.drawio
cfg/: display.json  key_bindings.json  level.json  material.json  mesh.json  player.json
levels/: 000.json  001.json  002.json  003.json
levels/00/: logic_graph.json  materials.json
levels/01/: inputs.json  logic_graph.json  materials.json  player.json
levels/02/: logic_graph.json  outputs.json
levels/03/: goal.json  materials.json  outputs.json  props.json
levels/04/: inputs.json  logic_graph.json  outputs.json  walls.json
src/: collision.rs  config.rs  consts.rs  handles.rs  input.rs  interactables.rs  level.rs  main.rs  movement.rs  player.rs  resources.rs  spawner.rs
src/configuration/: display.rs  key_bindings.rs  level.rs  material.rs  mesh.rs  mod.rs  player.rs
src/hud/: mod.rs
src/level/: blue_print.rs  bundles.rs  gate.rs  goal.rs  input.rs  level.rs  level_change.rs  level_components.rs  level_pack.rs  logic_graph.rs  logic_tree.rs  logic_tree_v2.rs  manager.rs  mod.rs  old_level_components.rs  output.rs  time_shift.rs
src/level/blueprints/: goal.rs  input.rs  level.rs  mod.rs  output.rs  props.rs  wall.rs
src/level/bundles/: consts.rs  goal.rs  input.rs  level.rs  mod.rs  output.rs  props.rs  wall.rs
src/player/: mod.rs  player_bundle.rs  player_camera.rs
src/ui/: button.rs  events.rs  mod.rs  selection_list.rs  stopwatch_display.rs  text.rs  ui_manager.rs  ui_plugin.rs
