[package]
name = "time_trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {version = "0.9.1", features = ["dynamic"]}
serde = "1.0.152"
serde_json = "1.0.91"
lazy_static = "1.4.0"
chrono = "0.4.23"
bevy = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy-inspector-egui-rapier = {version = "0.9.0", features = ["rapier2d"]}
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable", "debug-render", "parallel"]}

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-Zshare-generics=off"]