[package]
name = "time_trial"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_rapier2d = "0.27.0"
bevy-trait-query = "0.5.1"
chrono = "0.4.38"
serde = "1.0.203"
serde_json = "1.0.117"
serde-big-array = "0.5.1"

[patch.crates-io]
bevy-trait-query = { git = "https://github.com/RobWalt/bevy-trait-query.git", branch = "bevy-0.14-partial-update" }

# Dev build settings
[profile.dev]
opt-level = 1
incremental = true
[profile.dev.package.bevy_rapier2d]
opt-level = 3

# Release build settings
[profile.release]
codegen-units = 1
lto = true
incremental = false
debug = false
[profile.release.package."*"]
opt-level = 3
